add style.css, connect to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <body></body>
 </html>
 <head>
+    <link rel="stylesheet" href="style.css" />
     <title>My Personal Website</title>
 </head>
 <body>
