add photo and title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h4>A Fantastic Adventure</h4>
+    <h2>Tom Pence is an Amateur Photographer Who Has Spent Time in the Arctic and Antarctic and Many Places in Between</h2>
+    <img src="images/IMG_20171103_194201.jpg" alt="Horizon in Antarctica" title="Ross Island Antarctica" width="800" height="600"
     <script src="script.js"></script>
   </body>
 </html>
