--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
   </head>
   <body>
     <h4>A Fantastic Adventure</h4>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>    
     <h2>Tom Pence is an Amateur Photographer Who Has Spent Time in the Arctic and Antarctic and Many Places in Between</h2>
+    <button>See Collection</button>
     <img src="images/IMG_20171103_194201.jpg" alt="Horizon in Antarctica" title="Ross Island Antarctica" width="800" height="600"
     <script src="script.js"></script>
   </body>
