modify photo and nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>    
     <h2>Tom Pence is an Amateur Photographer Who Has Spent Time in the Arctic and Antarctic and Many Places in Between</h2>
     <button>See Collection</button>
-    <img src="images/IMG_20171103_194201.jpg" alt="Horizon in Antarctica" title="Ross Island Antarctica" width="800" height="600"
+    <img src="images/IMG_20230107_180222.jpg" alt="Ouray, Colorado" title="Ouray, Colorado" width="600" height="400"
     <script src="script.js"></script>
   </body>
 </html>
