--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      div {
+        margin-top: 20px;
+        margin-bottom: 100px;
+        margin-left: 150px;
+        margin-right: 150px;
+      }
+    </style>
     <link rel="stylesheet" href="style.css" />
-    <title>My Personal Website</title>
+    <title>Fantastic Adventures</title>
   </head>
   <body>
-    <h4>A Fantastic Adventure</h4>
+    <h1>Tom Pence</h1>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-instagram"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-linkedin"></a>
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
       <a href="#about">About</a>
+      <a href="#contact">Contact</a>
     </div>    
-    <h2>Tom Pence is an Amateur Photographer Who Has Spent Time in the Arctic and Antarctic and Many Places in Between</h2>
-    <button>See Collection</button>
-    <img src="images/IMG_20230107_180222.jpg" alt="Ouray, Colorado" title="Ouray, Colorado" width="600" height="400"
-    <script src="script.js"></script>
+    <h2>Tom is an Adventurer Who Has Spent Time in Antarctica, Greenland, Alaska, and Numerous Places in Between</h2>
+<link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
+    <img src="images/IMG_20230107_180222.jpg" alt="Ouray, Colorado" title="Ouray, Colorado" width="1200" height="800"
+    
+<script src="script.js"></script>
+    <section class="yellow"><h1>Alaska</h1>
+      <div class="fade-in-image">
+        <img src="images/DSC_0097 (2).JPG" alt="Seward, Alaska" title="Resurrection Bay" width="1200" height="700">
+     </div>
+     </section>
+    <section class="red"><h1>Greenland</h1>
+      <div class="fade-in-image">
+        <img src="images/PXL_20220518_195515029_2.jpg" alt="Summit Camp, Greenland" title="LC-130 in Greenland" width="1200" height="700">
+     </div>
+     </section>
+    <section class="blue"><h1>Antarctica</h1>
+      <div class="fade-in-image">
+        <img src="images/DSC_1056 (2).jpg" alt="South Pole, Antarctica" title="Ceremonial South Pole" width="1200" height="700">
+     </div>
+     </section>
+    <section class="green"><h1>Flagstaff, AZ</h1>
+      <div class="fade-in-image">
+        <img src="images/PXL_20201013_132943877.jpg" alt="Flagstaff, AZ" title="Mount Humphreys" width="1200" height="700">
+     </div>
+     </section>
+    
   </body>
 </html>
